--- a/MonthlyChallenge12-20/MonthlyChallenge12-20.csproj
+++ b/MonthlyChallenge12-20/MonthlyChallenge12-20.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums.cs" />
+    <Compile Include="LevelGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TileType.cs" />
